<resources>
    <string name="app_name">خدمات مشترکین</string>
    <string name="copy_right">copyright 2017 by H.G.K co</string>
    <string name="app_version">1.1.0.1</string>
    <string name="attention">توجه</string>
    <string name="dear_user">همکار گرامی!</string>
    <string name="accepted">OK</string>
    <string name="message">message</string>
    <string name="loading_getting_info">ارتباط با سرویس دهنده</string>
    <string name="loading_connecting">ارتباط با سرور</string>
    <string name="navigation_drawer_open">باز کردن منو</string>
    <string name="navigation_drawer_close">بستن منو</string>
    <string name="download">بارگیری اطلاعات</string>
    <string name="read">قرائت</string>
    <string name="upload">تخلیه اطلاعات</string>
    <string name="load">بارگیری</string>
    <string name="reload">تخلیه</string>
    <string name="reading">گزارش قرائت من</string>
    <string name="exit">خروج</string>
    <string name="bill">توزیع قبض</string>
    <string name="setting">تنظیمات برنامه</string>
    <string name="reading_setting">تنظیمات قرائت</string>
    <string name="help">درباره ما</string>
    <string name="permission_not_completed">بستن برنامه</string>
    <string name="force_close">مجوز ها کامل نیست</string>
    <string name="call_operator">"لطفا با راهبر سیستم تماس حاصل فرمایید"</string>
    <string name="submit">ثبت</string>
    <string name="close">بستن</string>
    <string name="next"> بعدی </string>
    <string name="previous"> قبلی </string>
    <string name="location">نقطه یابی</string>
    <string name="eshterak">شماره اشتراک</string>
    <string name="qeraat">کد قرائت</string>
    <string name="company_site">WWW.TPWW.IR</string>
    <string name="username">نام کاربری</string>
    <string name="password">گذرواژه</string>
    <string name="login">ورود</string>
    <string name="error">خطا</string>
    <string name="error_empty">این فیلد باید پر شود.</string>
    <string name="error_empty_all">همه فیلد ها خالی است.</string>
    <string name="error_short_length">.این فیلد کوتاه است</string>
    <string name="error_similar">شماره پرونده و شماره اشتراک مطابق نیستند.</string>
    <string name="error_IO">خطا در جابجای اطلاعات، لطفا مجدد تلاش کنید</string>
    <string name="error_Socket">خطادر ارتباط با سرور، لطفا تنظیمات شبکه خود را بررسی و مجدد تلاش کنید</string>
    <string name="error_other">جهت ارتباط با پشتیبانی; علت خطا:</string>
    <string name="error_disconnected">برقراری ارتباط حین جابجایی اطلاعات با خطا مواجه شد</string>
    <string name="error_is_not_match">نام کاربری و گذرواژه با یکدیگر مطابقت ندارند</string>
    <string name="error_passwords_is_not_match">گذرواژه و تکرار آن با یکدیکر مطابق نیستند</string>
    <string name="error_in_record_voice">در ضبظ صدا مشکلی به وجود آمد</string>
    <string name="error_in_play_voice">در پخش صدا مشکلی به وجود آمد</string>
    <string name="error_in_format">فرمت وارد نشده نادرست است</string>
    <string name="error_internal">خطای داخلی سرور، با پشتیبان تماس حاصل فرمایید</string>
    <string name="error_input">ورودی های خود را چک کنید</string>
    <string name="error_change_server">سرور در حال تغییرات است، لطفا منتظر بمانید و در صورت برطرف نشدن مشکل با پشتیبان تماس حاصل فرماید</string>
    <string name="error_user_password">نام کاربری و گذرواژه در سیستم موجود نیست، لطفا در ورود اطلاعات دقت قرمایید</string>
    <string name="error_not_update1">همکار گرامی لطفا نسخه به روز شده اپلیکیشن را از منوی تنظیمات  بخش به روز رسانی دریافت نمایید</string>
    <string name="error_not_update2">همکار گرامی لطفا چهت دریافت آخرین نسخه اپلیکیشن با راهبر تماس حاصل فرمایید</string>
    <string name="error_not_auth">مجوز های شما باطل شده است، از برنامه خارج و مجددا وارد شوید</string>

    <string name="setting_gps">تنظیمات جی پی اس</string>
    <string name="gps_question">مکان یابی شما غیر فعال است ،آیا مایلید به قسمت تنظیمات مکان یابی منتقل شوید</string>
    <string name="close_app">بستن برنامه</string>
    <string name="setting_">تنظیمات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="side_bar">جهت باز کردن صفحه های جدید لطفا از نوار کنار استفاده فرمایید</string>

    <string name="tsw_boundary">http://81.90.148.22:6080/arcgis/rest/services/Urban_Features/Cities/MapServer</string>
    //
    //map server layers url
    <string name="sewage_manhole">http://81.90.148.22:6080/arcgis/rest/services/Sewage_Features/Sewage_Manhole/MapServer</string>
    <string name="sewage_pipe">http://81.90.148.22:6080/arcgis/rest/services/Sewage_Features/Sewage_Pipe/MapServer</string>
    <string name="network_pipe">http://81.90.148.22:6080/arcgis/rest/services/Customers/Pipe_Service/MapServer</string>
    <string name="eshterak_block">http://81.90.148.22:6080/arcgis/rest/services/Customers/Eshterak_Blocks/MapServer</string>
    <string name="street">http://81.90.148.22:6080/arcgis/rest/services/Urban_Features/Street/MapServer</string>
    <string name="parcel">http://81.90.148.22:6080/arcgis/rest/services/Customers/Parcel_Customers_New/MapServer</string>
    //layers url

    //feature server layer url
    <string name="manhole_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/Asbuilt_Manhole/MapServer/0</string>
    <string name="sewer_pipe_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/Asbuilt_Sewer_Pipe/MapServer/0</string>
    <string name="network_pipe_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/Network_Pipe/MapServer/0</string>
    <string name="network_valve_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/Network_Valve/MapServer/0</string>
    <string name="transmission_pipeline_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/Transmission_Pipeline/MapServer/0</string>
    <string name="water_well_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/Water_Well/MapServer/0</string>
    <string name="water_branch_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/%D8%A7%D9%86%D8%B4%D8%B9%D8%A7%D8%A8_%D8%A2%D8%A8/MapServer/0</string>
    <string name="common_block_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/%D8%A8%D9%84%D9%88%DA%A9_%D9%87%D8%A7%DB%8C_%D8%A7%D8%B4%D8%AA%D8%B1%D8%A7%DA%A9%DB%8C_%D8%A2%D8%A8/MapServer/0</string>
    <string name="network_line_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/%D8%AE%D8%B7%D9%88%D8%B7_%D8%B4%D8%A8%DA%A9%D9%87_%D8%AA%D9%88%D8%B2%DB%8C%D8%B9/MapServer/0</string>
    <string name="street_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/%D8%AE%DB%8C%D8%A7%D8%A8%D8%A7%D9%86/MapServer/0</string>
    <string name="town_feature_service">http://81.90.148.25:6080/arcgis/rest/services/ABFA_Data_Layers/%D8%B4%D9%87%D8%B1%D9%87%D8%A7%DB%8C_%D8%AA%D8%AD%D8%AA_%D9%BE%D9%88%D8%B4%D8%B4/MapServer/0</string>
    <string name="parcel_feature_service">http://81.90.148.22:6080/arcgis/rest/services/Customers/Parcel_Customers_New/MapServer/0</string>
    <string name="parcel_feature_service_golestan">http://81.90.148.22:6080/arcgis/rest/services/Parcels/Parcel_Golestan/FeatureServer/0</string>
    <string name="counter_feature_service">http://81.90.148.22:6080/arcgis/rest/services/Customers/Draw_Water_Meter/FeatureServer/0</string>
    //service feature table url

    //layer name
    <string name="manhole_persian">منهول</string>
    <string name="sewer_pipe_persian">لوله فاضلاب</string>
    <string name="network_pipe_persian">پایپ شبکه</string>
    <string name="network_valve_persian">والو شبکه</string>
    <string name="transmission_pipeline_persian">خطوط انتقال</string>
    <string name="water_well_persian">چاه آب</string>
    <string name="water_branch_persian">انشعاب آب</string>
    <string name="common_block_persian">بلوک های اشتراکی</string>
    <string name="network_line_persian">خطوط شبکه</string>
    <string name="street_persian">خیابان</string>
    <string name="town_persian">محدوده مناطق</string>
    <string name="parcel_persian">پارسل</string>
    <string name="counter_persian">کنتور</string>
    //layer name
    //---------------------------------------------------------------------- GIS
    ------------------------------------------------------------------------------------------------------------------------
    //
    <string name="osm">OSM</string>
    <string name="local_gis_basemap">نقشه واحد GIS</string>
    <string name="search">جستجو</string>
    //
    // warnings
    <string name="location_permission_denied"> بدلیل اشکال در مجوز دسترسی به مکان برنامه قادر به اجرا نخواهد بود</string>
    //warnings End
</resources>
