<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="Activities.HomeActivity"
    tools:showIn="@layout/home_app_bar">

    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/gray3"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/company_site"
        android:textColor="@color/black1" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="3dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/imageViewDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_download_information" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/download"
                    android:textColor="@color/black1" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/imageViewUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_data_unloading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/upload"
                    android:textColor="@color/black1" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/imageViewRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_readings"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/read"
                    android:textColor="@color/black1" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/imageViewExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/exit"
                    android:textColor="@color/red4" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_medium_margin"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:padding="@dimen/activity_mid_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/img_footer_logo" />

    </android.support.v7.widget.LinearLayoutCompat>


</RelativeLayout>
